# fida

./: .pre-commit-config.yaml  Makefile  README.md  example.py  main.py  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  setup.py  test.py
fida/: constituents.py  meta.py  mp.py  ohlcv.py  patches.py  util.py
scripts/: generate_dependencies.py
